# SUSTech_CS303_Othello

./: .gitignore  CMakeLists.txt  main.py  pyproject.toml  setup.py
src/: bindings.cpp  bitboard.cpp  components.py  game.py  mcts.cpp  model.py  playout.py  test.py  train.py  zorbist.cpp
src/cpp/: bitboard.cpp
src/cpp/include/: bitboard.hpp
src/cpp/test/: Makefile  main.cpp
src/include/: bitboard.hpp  mcts.hpp
src/test/: CMakeLists.txt  main.cpp
